# Programmatic-Drafting

./: .gitignore  .pre-commit-config.yaml  README.md  conftest.py  pyproject.toml  pytest.ini
.github/workflows/: ci-failure-digest.yml  ci-standard.yml  pr-auto-labeler.yml  pr-size-check.yml  stale-cleanup.yml  weekly-cad-sweep.yml
docs/: repo-outline.md
docs/assessments/: A-N_Assessment_2026-04-02.md  A-N_Assessment_2026-04-04.md  A-N_Assessment_2026-04-09.md  A-N_Assessment_2026-04-10.md  A-N_Assessment_2026-04-11.md  assessment_summary.json  (+3 more)
tests/: _vessel_drafter_scene_mesh_helpers.py  test_cli.py  test_constants.py  test_cylindrical_bath_layout.py  test_cylindrical_bath_manifest.py  test_electrode_advisor_defaults.py  test_electrode_advisor_manifest.py  test_step_export.py  test_vessel_drafter_defaults.py  test_vessel_drafter_export.py  test_vessel_drafter_geometry.py  test_vessel_drafter_gui.py  test_vessel_drafter_manifest.py  test_vessel_drafter_metrics.py  test_vessel_drafter_port_prompts.py  test_vessel_drafter_preview.py  test_vessel_drafter_preview_panel.py  test_vessel_drafter_profiles.py  test_vessel_drafter_rendering.py  test_vessel_drafter_scene.py  test_vessel_drafter_scene_common_mesh.py  test_vessel_drafter_scene_cylinder_mesh.py  test_vessel_drafter_scene_file_structure.py  test_vessel_drafter_scene_meshes.py  test_vessel_drafter_scene_revolution_mesh.py  test_vessel_drafter_scene_section.py  test_vessel_drafter_scene_section_mesh.py  test_vessel_drafter_scene_triangulation.py  test_vessel_drafter_three_d_sidebar.py  test_vessel_drafter_types.py
(+46 files in other folders)
