[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "programmatic-drafting"
version = "0.1.0"
description = "Programmatic STEP drafting and CAD automation for D-sorganization."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "build123d==0.10.0",
  "matplotlib==3.10.8",
  "PyQt6==6.8.1",
]

[project.optional-dependencies]
dev = [
  "black==25.12.0",
  "mypy==1.13.0",
  "pytest==8.3.5",
  "pytest-cov==6.0.0",
  "ruff==0.14.10",
]

[project.scripts]
programmatic-drafting = "programmatic_drafting.cli:main"
vessel-drafter = "programmatic_drafting.gui.vessel_drafter_window:launch"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
